# ccsds-spacepacket

./: Cargo.toml  README.md
docs/: DesignDecisions.md
docs/diagram_source/: Class Meanings.drawio
src/: lib.rs  parser.rs  primaryheader.rs  spacepacket.rs  types.rs
