[package]
name = "ccsds_spacepacket"
version = "0.1.0"
authors = ["Adrian Edwards <17362949+MoralCode@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2.7"
failure = "0.1.3"
derive_builder = "*"
nom = "6.2.1"